--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url(http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
+@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
 
 // Define defaults for each variable.
 
