--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Inconsolata);
-@import url(http://fonts.googleapis.com/css?family=Josefin+Slab);
+@import url(https://fonts.googleapis.com/css?family=Inconsolata);
+@import url(https://fonts.googleapis.com/css?family=Josefin+Slab);
 
 /**
  * Reset some basic elements
